--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
   :root {
     --clr-white: hsl(0, 0%, 100%);
     --clr-gray-100: hsl(0, 2%, 79%);
-    --clr-brand-400: hsl(25, 88%, 75%);
+    --clr-brand-400: hsl(25, 88%, 69%);
     --clr-brand-500: hsl(148deg 76% 40.24%);
     --clr-green-400: hsl(143, 19%, 49%);
     --clr-green-500: hsl(143, 38%, 37%);
@@ -211,7 +211,7 @@
 
   a:hover,
   a:focus-visible {
-    color: var(--background-accent-light);
+    color: var(--text-brand-light);
   }
 
   img {
@@ -446,7 +446,7 @@
 
       &:hover,
       &:focus-visible {
-        color: var(--background-accent-light);
+        color: var(--text-brand-light);
       }
     }
   }
@@ -459,7 +459,7 @@
 
   .hero {
     text-align: center;
-    background-color: var(--background-dark);
+    background-color: var(--background-accent-dark);
     font-size: var(--font-size-md);
 
     animation: fade-out forwards;
@@ -473,7 +473,7 @@
     > span {
       display: block;
       font-size: var(--font-size-heading-regular);
-      color: var(--text-brand);
+      color: var(--text-brand-light);
     }
   }
 
@@ -514,7 +514,7 @@
   .card__links {
     margin-top: auto;
     display: flex;
-    gap: 1rem;
+    gap: 0.5rem;
     flex-wrap: wrap;
   }
   .card__note {
@@ -532,8 +532,8 @@
     font-size: var(--font-size-md);
     text-decoration: none;
     background-color: var(--background-accent-main);
-    padding: 0.5rem 1rem;
-    border-radius: var(--border-radius-1);
+    padding: 0.5rem;
+    border-radius: var(--border-radius-2);
   }
 
   .button:hover,
@@ -546,7 +546,7 @@
     font-family: var(--ff-heading);
     background-color: var(--background-accent-main);
     color: var(--text-high-contrast);
-    padding: 0.5rem 0.5rem 0.5rem 1rem;
+    padding: 0.5rem 0.3rem;
     border: 0;
     border-radius: var(--border-radius-2);
   }
